[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/HSVmodulator_Saturation.tres" type="Theme" id=1]
[ext_resource path="res://Theme/HSVmodulator_Hue.tres" type="Theme" id=2]
[ext_resource path="res://Theme/HSVmodulator_Brightness.tres" type="Theme" id=3]
[ext_resource path="res://Theme/Label.tres" type="Theme" id=4]
[ext_resource path="res://Script/Intro/Hair_color.gd" type="Script" id=5]

[node name="HSVmodulator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_right = -552.0
margin_bottom = -314.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hue" type="HSlider" parent="."]
margin_left = 1.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 16.0
theme = ExtResource( 2 )
max_value = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saturation" type="HSlider" parent="."]
margin_left = 1.0
margin_top = 19.0
margin_right = 65.0
margin_bottom = 29.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brightness" type="HSlider" parent="."]
margin_left = 1.0
margin_top = 34.0
margin_right = 65.0
margin_bottom = 44.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hue_Value" type="Label" parent="."]
margin_left = 67.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 18.0
theme = ExtResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saturation_Value" type="Label" parent="."]
margin_left = 67.0
margin_top = 16.0
margin_right = 91.0
margin_bottom = 32.0
theme = ExtResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brightness_Value" type="Label" parent="."]
margin_left = 67.0
margin_top = 30.0
margin_right = 91.0
margin_bottom = 46.0
theme = ExtResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Hue" to="." method="_on_Hue_value_changed"]
[connection signal="value_changed" from="Saturation" to="." method="_on_Saturation_value_changed"]
[connection signal="value_changed" from="Brightness" to="." method="_on_Brightness_value_changed"]
